--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "bower": ">=1.2.7"
   },
   "scripts": {
-    "postinstall": [
-      "grunt && ./node_modules/bower/bin/bower install"
-    ]
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "engines": [
     "node >= 0.8.0"
