--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bower": ">=1.2.7"
   },
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "node node_modules/bower/bin/bower install"
   },
   "engines": [
     "node >= 0.8.0"
